--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
 			<!--testimonials section-->
 			<section id="testimonials">
-				<h2>Our Happy Investors</h2>
+				<h2 class="text-center pb-3 font-weight-bolder">Our Happy Investors</h2>
 				<!--start of testimonials carousel-->
 				<div id="testimonialCarousel" class="carousel slide" data-ride="carousel">
 					<div class="carousel-inner">
