--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 					<img src="img/logo.png" alt="fox trade logo image">
 				</div>
 				<div class="top-contact">
-					<img src="img/email.svg" alt="email icon" class="icon-image">
+					<img src="img/email.svg" alt="email icon" class="top-icon">
 					<div class="top-contact_content">
 						<h6>EMAIL</h6>
 						<p>admin@fox-tradeinvest.com</p>
 					</div>	
 				</div>
 				<div class="top-contact">
-					<img src="img/phone.svg" alt="phone icon" class="icon-image">
+					<img src="img/phone.svg" alt="phone icon" class="top-icon">
 					<div class="top-contact_content">
 						<h6>Phone</h6>
 						<p>+97145677990</p>
@@ -40,7 +40,7 @@
 					
 				</div>
 				<div class="top-contact">
-					<img src="img/clock.svg" alt="clock icon" class="icon-image">
+					<img src="img/clock.svg" alt="clock icon"class="top-icon">
 					<div class="top-contact_content">
 						<h6>Day Started</h6>
 						<p>June, 2015</p>
@@ -601,14 +601,14 @@
 				</form>
 			</section>
 
-			<section>
+			<section class="mb-5">
 				<div style="height:560px; background-color: #1D2330; overflow:hidden; box-sizing: border-box; border: 1px solid #282E3B; border-radius: 4px; text-align: right; line-height:14px; font-size: 12px; font-feature-settings: normal; text-size-adjust: 100%; box-shadow: inset 0 -20px 0 0 #262B38;padding:1px;padding: 0px; margin: 0px; width: 100%;"><div style="height:540px; padding:0px; margin:0px; width: 100%;"><iframe src="https://widget.coinlib.io/widget?type=chart&theme=dark&coin_id=859&pref_coin_id=1505" width="100%" height="536px" scrolling="auto" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;line-height:14px;"></iframe></div><div style="color: #626B7F; line-height: 14px; font-weight: 400; font-size: 11px; box-sizing: border-box; padding: 2px 6px; width: 100%; font-family: Verdana, Tahoma, Arial, sans-serif;"><a href="https://coinlib.io" target="_blank" style="font-weight: 500; color: #626B7F; text-decoration:none; font-size:11px">Cryptocurrency Prices</a>&nbsp;by Coinlib</div></div>
 			</section>
 			
-			<section>
+			<section class="mb-5 mt-5">
 				<script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/coinPriceBlock.js"></script><div id="coinmarketcap-widget-coin-price-block" coins="1,1027,825,52,4172,1839,5426,74" currency="USD" theme="light" transparent="false" show-symbol-logo="true"></div>
 			</section>
-			<section>
+			<section class="mb-5 mt-5">
 				<script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/coinMarquee.js"></script><div id="coinmarketcap-widget-marquee" coins="1,1027,825,1839,52" currency="USD" theme="light" transparent="false" show-symbol-logo="true"></div>
 			</section>
 		<!--	<section id="login">
